--- a/website/about/index.html
+++ b/website/about/index.html
@@ -60,14 +60,14 @@
       <article class="flex flex-col w-full mb-6">
         <h4 class="subheader-section">{{ _('Our Community') }}</h4>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('There is a passionate team of volunteers involved in developing Thunderbird and assisting its users who would welcome your involvement. Check out our <a href="%(volunteer)s">Get Involved page</a> to learn how you can participate on the Thunderbird team. We also have paid staff working full-time on Thunderbird, <a href="%(donate)s" target="_blank">funded by donations</a> from our users. If you’re curious about who is working on Thunderbird, check out the <a href="%(core_team)s" target="_blank">list of our core contributors</a>.')|format(volunteer=url('thunderbird.get-involved'), donate=donate_url('about'), core_team=url('wiki.moz', '/Thunderbird/Core_Team')) }}
+          {{ _('There is a passionate team of volunteers involved in developing Thunderbird and assisting its users who would welcome your involvement. Check out our <a href="%(volunteer)s">Get Involved page</a> to learn how you can participate on the Thunderbird team. We also have paid staff working full-time on Thunderbird, <a href="%(donate)s">funded by donations</a> from our users. If you’re curious about who is working on Thunderbird, check out the <a href="%(core_team)s">list of our core contributors</a>.')|format(volunteer=url('thunderbird.get-involved'), donate=donate_url('about'), core_team=url('wiki.moz', '/Thunderbird/Core_Team')) }}
         </p>
       </article>
 
       <article class="flex flex-col w-full">
         <h4 class="subheader-section">{{ _('Thunderbird Council') }}</h4>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('The Thunderbird project is governed by seven councilors, elected by the Thunderbird community’s active contributors. You can see the current elected Thunderbird Council members <a href="%(council)s" target="_blank">on the Thunderbird wiki</a>.')|format(council=url('wiki.moz', '/Modules/Thunderbird#Thunderbird_Council')) }}
+          {{ _('The Thunderbird project is governed by seven councilors, elected by the Thunderbird community’s active contributors. You can see the current elected Thunderbird Council members <a href="%(council)s">on the Thunderbird wiki</a>.')|format(council=url('wiki.moz', '/Modules/Thunderbird#Thunderbird_Council')) }}
         </p>
       </article>
     </aside>
@@ -81,12 +81,12 @@
           <aside class="flex flex-col">
             {{ _('Thunderbird and Mozilla Foundation')}}
             <small class="font-normal font-md tracking-normal normal-case p-links-blue">
-              {{ _('Thunderbird lives at the nonprofit <a href="%(foundation)s" target="_blank">Mozilla Foundation</a>.')|format(foundation=url('foundation.about')) }}
+              {{ _('Thunderbird lives at the nonprofit <a href="%(foundation)s">Mozilla Foundation</a>.')|format(foundation=url('foundation.about')) }}
             </small>
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('Thunderbird is an independent project with its legal and financial home at <a href="%(foundation)s" target="_blank">the Mozilla Foundation</a>. The Mozilla Foundation believes the Internet is a global public resource that must remain open and accessible to all. It is focused on advocacy issues and keeping the Internet healthy, but is also the sole shareholder in the maker of Firefox, the Mozilla Corporation. Mozilla exerts no governance over the project, which instead falls to the Thunderbird Council, elected by the Thunderbird project’s community. The Mozilla Foundation became Thunderbird’s home after an <a href="%(home_blog_post)s" target="_blank">exploration of legal homes in 2017</a>.')|format(foundation=url('foundation.about'), home_blog_post='https://blog.mozilla.org/thunderbird/2017/05/thunderbirds-future-home/') }}
+          {{ _('Thunderbird is an independent project with its legal and financial home at <a href="%(foundation)s">the Mozilla Foundation</a>. The Mozilla Foundation believes the Internet is a global public resource that must remain open and accessible to all. It is focused on advocacy issues and keeping the Internet healthy, but is also the sole shareholder in the maker of Firefox, the Mozilla Corporation. Mozilla exerts no governance over the project, which instead falls to the Thunderbird Council, elected by the Thunderbird project’s community. The Mozilla Foundation became Thunderbird’s home after an <a href="%(home_blog_post)s">exploration of legal homes in 2017</a>.')|format(foundation=url('foundation.about'), home_blog_post='https://blog.mozilla.org/thunderbird/2017/05/thunderbirds-future-home/') }}
         </p>
       </aside>
     </section>
