--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -76,7 +76,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('If you would like to learn how to contribute code to Thunderbird, check out our <a href="https://developer.thunderbird.net/" target="_blank">developer documentation.</a> You will learn how to get the code, set any necessary configuration, build the calendar, rebuild after checking out new code, etc. It is a good read. Don’t just skim it.') }}
+          {{ _('If you would like to learn how to contribute code to Thunderbird, check out our <a href="https://developer.thunderbird.net/">developer documentation.</a> You will learn how to get the code, set any necessary configuration, build the calendar, rebuild after checking out new code, etc. It is a good read. Don’t just skim it.') }}
         </p>
       </aside>
     </section>
@@ -90,13 +90,13 @@
           </p>
           <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
             <li>
-              {{ _('<a href="https://hg.mozilla.org/comm-central/" target="_blank">comm-central</a> is the main Thunderbird repository.') }}
+              {{ _('<a href="https://hg.mozilla.org/comm-central/">comm-central</a> is the main Thunderbird repository.') }}
             </li>
             <li>
-              {{ _('Thunderbird also relies on the code from <a href="https://hg.mozilla.org/mozilla-central/" target="_blank">mozilla-central</a>. See the <a href="https://developer.thunderbird.net/the-basics/building-thunderbird" target="_blank">build instructions</a> for how to obtain all the code needed to build.') }}
+              {{ _('Thunderbird also relies on the code from <a href="https://hg.mozilla.org/mozilla-central/">mozilla-central</a>. See the <a href="https://developer.thunderbird.net/the-basics/building-thunderbird">build instructions</a> for how to obtain all the code needed to build.') }}
             </li>
             <li>
-              {{ _('You can search the code on <a href="https://searchfox.org/comm-central/source" target="_blank">SearchFox</a>.') }}
+              {{ _('You can search the code on <a href="https://searchfox.org/comm-central/source">SearchFox</a>.') }}
             </li>
           </ul>
           <p class="font-md tracking-wide leading-loose mt-0 mb-0">
@@ -104,10 +104,10 @@
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('<a href="https://github.com/thundernest" target="_blank">Thundernest</a> contains the code for Thunderbird.net (this site), as well as the Thunderbird web server setup scripts.') }}
+              {{ _('<a href="https://github.com/thundernest">Thundernest</a> contains the code for Thunderbird.net (this site), as well as the Thunderbird web server setup scripts.') }}
             </li>
             <li>
-              {{ _('<a href="https://github.com/mozilla-comm" target="_blank">Thunderbird on GitHub</a> contains several Thunderbird related repositories.') }}
+              {{ _('<a href="https://github.com/mozilla-comm">Thunderbird on GitHub</a> contains several Thunderbird related repositories.') }}
             </li>
           </ul>
         </article>
@@ -117,20 +117,20 @@
         <article class="flex flex-col mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('Bugs') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-0 mt-0 p-links-blue">
-            {{ _('All Thunderbird bugs live on <a href="https://bugzilla.mozilla.org" target="_blank">Mozilla’s Bugzilla</a>. Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out these pre-defined searches to test the waters:') }}
+            {{ _('All Thunderbird bugs live on <a href="https://bugzilla.mozilla.org">Mozilla’s Bugzilla</a>. Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out these pre-defined searches to test the waters:') }}
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('You can help out by triaging <a href="https://bugzilla.mozilla.org/buglist.cgi?list_id=14114741&chfieldto=Now&query_format=advanced&chfield=%5BBug%20creation%5D&chfieldfrom=-3d&product=MailNews%20Core&product=Thunderbird" target="_blank">incoming bugs</a>. Known bugs should be marked as duplicates, unconfirmed bugs often needs someone to see if they too can reproduce.') }}
+              {{ _('You can help out by triaging <a href="https://bugzilla.mozilla.org/buglist.cgi?list_id=14114741&chfieldto=Now&query_format=advanced&chfield=%5BBug%20creation%5D&chfieldfrom=-3d&product=MailNews%20Core&product=Thunderbird">incoming bugs</a>. Known bugs should be marked as duplicates, unconfirmed bugs often needs someone to see if they too can reproduce.') }}
               </li>
             <li>
-              {{ _('<a href="https://mzl.la/2oijxOd" target="_blank">"Good first bugs"</a> which are extra easy to try and fix when you are just starting out.') }}
+              {{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy to try and fix when you are just starting out.') }}
             </li>
             <li>
-              {{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1" target="_blank">Mentored Bugs</a> have a mentor who commits to helping you every step of the way.') }}
+              {{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a mentor who commits to helping you every step of the way.') }}
             </li>
             <li>
-              {{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries" target="_blank">Thunderbird bug queries</a> is a wiki page with lots of useful searches.') }}
+              {{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">Thunderbird bug queries</a> is a wiki page with lots of useful searches.') }}
             </li>
           </ul>
         </article>
@@ -139,7 +139,7 @@
       <aside class="flex flex-col">
         <h4 class="subheader-section">{{ _('Add-Ons') }}</h4>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('Learn how to create add-ons and themes by checking out our <a href="https://developer.thunderbird.net/add-ons/about-add-ons" target="_blank">developer documentation. </a>') }}
+          {{ _('Learn how to create add-ons and themes by checking out our <a href="https://developer.thunderbird.net/add-ons/about-add-ons">developer documentation. </a>') }}
         </p>
       </aside>
     </section>
@@ -158,14 +158,14 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement" target="_blank">Bugzilla</a>.<br/>You can also discuss design in the <a href="irc://irc.mozilla.org/maildev" target="_blank">#maildev</a> irc channel, or the <a href="https://discourse.mozilla.org/c/thunderbird" target="_blank">Discourse category</a>.') }}
+          {{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>.<br/>You can also discuss design in the <a href="irc://irc.mozilla.org/maildev">#maildev</a> irc channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}
         </p>
       </aside>
 
       <aside class="flex flex-col w-full lg:w-1/2 lg:mt-20">
         <h4 class="subheader-section">{{ _('Style Guide') }}</h4>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('Looking for the Thunderbird logo, icons, color palette, or other design resources? Check out our <a href="%(style_guide)s" target="_blank">style guide</a>.')|format(style_guide=url('thunderbird.style')) }}
+          {{ _('Looking for the Thunderbird logo, icons, color palette, or other design resources? Check out our <a href="%(style_guide)s">style guide</a>.')|format(style_guide=url('thunderbird.style')) }}
         </p>
       </aside>
     </section>
@@ -189,10 +189,10 @@
         <h4 class="subheader-section">{{ _('Where documentation lives') }}</h4>
         <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
           <li>
-            {{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home" target="_blank">The Thunderbird section</a> of the Mozilla wiki.') }}
+            {{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home">The Thunderbird section</a> of the Mozilla wiki.') }}
           </li>
           <li>
-            {{ _('The official <a href="https://developer.thunderbird.net/" target="_blank">Thunderbird developer website.</a>') }}
+            {{ _('The official <a href="https://developer.thunderbird.net/">Thunderbird developer website.</a>') }}
           </li>
         </ul>
       </article>
@@ -203,13 +203,13 @@
         <h4 class="subheader-section">{{ _('Contributing to documentation') }}</h4>
         <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
           <li>
-            {{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts" target="_blank">MozillaWiki:Policies/Accounts</a> - What you need to know to contribute to the wiki. That page is applicable to the Thunderbird section.') }}
+            {{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts">MozillaWiki:Policies/Accounts</a> - What you need to know to contribute to the wiki. That page is applicable to the Thunderbird section.') }}
           </li>
           <li>
-            {{ _('You can contribute to the Thunderbird developer documentation via its repository <a href="https://github.com/thundernest/developer-docs" target="_blank"> on GitHub.</a>') }}
+            {{ _('You can contribute to the Thunderbird developer documentation via its repository <a href="https://github.com/thundernest/developer-docs"> on GitHub.</a>') }}
           </li>
           <li>
-            {{ _('Support users asking for help on the <a href="https://support.mozilla.org/en-US/questions/thunderbird" target="_blank">Thunderbird Support Forum</a>') }}
+            {{ _('Support users asking for help on the <a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}
           </li>
         </ul>
       </article>
@@ -229,7 +229,7 @@
           </aside>
         </h3>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization" target="_blank">Thunderbird Localization</a> on MDN.') }}
+          {{ _('See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
         </p>
       </article>
     </aside>
@@ -246,7 +246,7 @@
           </aside>
         </h3>
         <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing" target="_blank">Thunderbird:Testing</a> on the Mozilla Wiki.') }}
+          {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">Thunderbird:Testing</a> on the Mozilla Wiki.') }}
         </p>
       </article>
     </aside>
@@ -270,26 +270,26 @@
         <article class="flex flex-col w-full mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('Discussion Forums') }}</h4>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
-            <li>{{ _('<a href="https://support.mozilla.org/en-US/questions/thunderbird" target="_blank">Thunderbird Support Forum</a>') }}
+            <li>{{ _('<a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}
             </li>
             <li>
-              {{ _('<a href="https://discourse.mozilla.org/" target="_blank">Mozilla’s Discourse</a>') }}
+              {{ _('<a href="https://discourse.mozilla.org/">Mozilla’s Discourse</a>') }}
               <ul>
                 <li>
-                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird" target="_blank">Thunderbird</a>') }}</li>
+                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird">Thunderbird</a>') }}</li>
                 <li>
-                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird/beta" target="_blank">Thunderbird Beta</a>') }}
+                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird/beta">Thunderbird Beta</a>') }}
                 </li>
                 <li>
-                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird/addons" target="_blank">Thunderbird Add-Ons</a>') }}
+                  {{ _('<a href="https://discourse.mozilla.org/c/thunderbird/addons">Thunderbird Add-Ons</a>') }}
                 </li>
               </ul>
             </li>
             <li>
-              {{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29" target="_blank">Thunderbird Builds</a> on MozillaZine - For help with building Thunderbird and using daily builds.') }}
+              {{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29">Thunderbird Builds</a> on MozillaZine - For help with building Thunderbird and using daily builds.') }}
             </li>
             <li>
-              {{ _('<a href="https://groups.google.com/forum/#!forum/mozilla.support.thunderbird" target="_blank">mozilla.support.thunderbird</a> is a Google Group for support.')}}
+              {{ _('<a href="https://groups.google.com/forum/#!forum/mozilla.support.thunderbird">mozilla.support.thunderbird</a> is a Google Group for support.')}}
             </li>
           </ul>
         </article>
@@ -299,19 +299,19 @@
         <article class="flex flex-col w-full mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('IRC Channels on irc.mozilla.org') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('You can use <a href="https://mibbit.com/" target="_blank">Mibbit.com</a> if you don’t already have a preferred IRC client..') }}
+            {{ _('You can use <a href="https://mibbit.com/">Mibbit.com</a> if you don’t already have a preferred IRC client..') }}
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/maildev" target="_blank">#maildev</a> - For hacking on Thunderbird.') }}</li>
+              {{ _('<a href="irc://irc.mozilla.org/maildev">#maildev</a> - For hacking on Thunderbird.') }}</li>
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/extdev" target="_blank">#extdev</a> - For building Thunderbird add-ons/extensions.') }}
+              {{ _('<a href="irc://irc.mozilla.org/extdev">#extdev</a> - For building Thunderbird add-ons/extensions.') }}
             </li>
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/thunderbird" target="_blank">#thunderbird</a> - For general questions and support.') }}
+              {{ _('<a href="irc://irc.mozilla.org/thunderbird">#thunderbird</a> - For general questions and support.') }}
             </li>
             <li>
-              {{ _('<a href="irc://irc.mozilla.org/tb-qa" target="_blank">#tb-qa</a> - For QA chat.') }}</li>
+              {{ _('<a href="irc://irc.mozilla.org/tb-qa">#tb-qa</a> - For QA chat.') }}</li>
           </ul>
         </article>
       </aside>
@@ -321,29 +321,29 @@
           <h4 class="subheader-section">{{ _('Mailing Lists') }}</h4>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning" target="_blank">tb-planning</a> (<a href="https://groups.google.com/forum/#!forum/tb-planning" target="_blank">Google Group Mirror</a>) - For high level topics.') }}
+              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> (<a href="https://groups.google.com/forum/#!forum/tb-planning">Google Group Mirror</a>) - For high level topics.') }}
             </li>
             <li>
-              {{ _('<a href="http://lists.thunderbird.net/mailman/listinfo/maildev_lists.thunderbird.net" target="_blank">Maildev</a> - A moderated mailing list for Thunderbird Engineering plans.') }}
+              {{ _('<a href="http://lists.thunderbird.net/mailman/listinfo/maildev_lists.thunderbird.net">Maildev</a> - A moderated mailing list for Thunderbird Engineering plans.') }}
             </li>
             <li>
-              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew" target="_blank">tb-support-crew</a> - For those who help the users.') }}
+              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> - For those who help the users.') }}
             </li>
             <li>
-              {{ _('<a href="https://mail.mozilla.org/listinfo/thunderbird-testers" target="_blank">thunderbird-testers</a> - For anyone who is helping test.') }}
+              {{ _('<a href="https://mail.mozilla.org/listinfo/thunderbird-testers">thunderbird-testers</a> - For anyone who is helping test.') }}
             </li>
             <li>
-              {{ _('<a href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird" target="_blank">dev-apps-thunderbird</a> (<a href="news://news.mozilla.org/mozilla.dev.apps.thunderbird" target="_blank">Newsgroup</a>) (<a href="https://groups.google.com/forum/#!forum/mozilla.dev.apps.thunderbird" target="_blank">Google Group Mirror</a>) - For technical and code related discussions, such as add-ons.') }}
+              {{ _('<a href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a> (<a href="news://news.mozilla.org/mozilla.dev.apps.thunderbird">Newsgroup</a>) (<a href="https://groups.google.com/forum/#!forum/mozilla.dev.apps.thunderbird">Google Group Mirror</a>) - For technical and code related discussions, such as add-ons.') }}
             </li>
             <li>
-              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise" target="_blank">tb-enterprise</a> - For ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}
+              {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise">tb-enterprise</a> - For ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}
             </li>
             <li>
-              {{ _('<a href="https://thunderbird.topicbox.com/groups/addons" target="_blank">Add-on Developers List</a> - For general discussions about creating add-ons, and is for add-on developers who need support in creating their add-ons.') }}
+              {{ _('<a href="https://thunderbird.topicbox.com/groups/addons">Add-on Developers List</a> - For general discussions about creating add-ons, and is for add-on developers who need support in creating their add-ons.') }}
             </li>
           </ul>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels" target="_blank">Communication Channels</a> wiki page.') }}
+            {{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels">Communication Channels</a> wiki page.') }}
           </p>
         </article>
       </aside>
