--- a/website/thunderbird/68.0/whatsnew/index.html
+++ b/website/thunderbird/68.0/whatsnew/index.html
@@ -41,7 +41,7 @@
         {{ _('Filelink attachments that have already been uploaded can now be linked to again instead of having to re-upload them. Also, an account is no longer required to use the default Filelink provider - <strong>WeTransfer</strong>.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1 p-links-blue">
-        {{ _('Other Filelink providers like Box and Dropbox are not included by default, but can be added by grabbing the <a href="%(dropbox)s" target="_blank">Dropbox</a> and <a href="%(box)s" target="_blank">Box</a> add-ons.')|format(dropbox='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-dropbox/',box='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-box/') }}
+        {{ _('Other Filelink providers like Box and Dropbox are not included by default, but can be added by grabbing the <a href="%(dropbox)s">Dropbox</a> and <a href="%(box)s">Box</a> add-ons.')|format(dropbox='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-dropbox/',box='https://addons.thunderbird.net/thunderbird/addon/filelink-provider-for-box/') }}
       </p>
     </aside>
 
