--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -26,16 +26,16 @@
     <section class="flex xl:w-full flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
       <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          {{ _('<a href="%(support)s" class="header-link" target="_blank">Mozilla Support Website</a>')|format(support=url('support')) }}
+          {{ _('<a href="%(support)s" class="header-link">Mozilla Support Website</a>')|format(support=url('support')) }}
         </h4>
         <p class="mt-0 mb-6 flex-1 p-links-blue">
-          {{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s" target="_blank">specifically the Thunderbird page</a>. There you can search for articles, ask questions, and read tutorials.')|format(support=url('support')) }}
+          {{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s">specifically the Thunderbird page</a>. There you can search for articles, ask questions, and read tutorials.')|format(support=url('support')) }}
         </p>
       </article>
 
       <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg lg:ml-16 lg:mr-16">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          {{ _('<a href="https://support.mozilla.org/questions/new/thunderbird" class="header-link" target="_blank">Ask a Question</a>') }}
+          {{ _('<a href="https://support.mozilla.org/questions/new/thunderbird" class="header-link">Ask a Question</a>') }}
         </h4>
         <p class="mt-0 mb-6 flex-1">
           {{ _('You can ask a question on the support website. <b>Remember to be courteous</b>, as most of the people providing support on this site are volunteers and fellow Thunderbird users like you!') }}
@@ -44,10 +44,10 @@
 
       <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          {{ _('<a href="irc://irc.mozilla.org/thunderbird" class="header-link" target="_blank">Live Chat on IRC</a>') }}
+          {{ _('<a href="irc://irc.mozilla.org/thunderbird" class="header-link">Live Chat on IRC</a>') }}
         </h4>
         <p class="mt-0 mb-6 flex-1 p-links-blue">
-          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird" target="_blank">#thunderbird channel on Mozilla’s IRC</a>. You can set up IRC in Thunderbird by following the <a href="https://support.mozilla.org/kb/instant-messaging-and-chat#w_configuring-chat" target="_blank">instructions on SUMO</a>.') }}
+          {{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird">#thunderbird channel on Mozilla’s IRC</a>. You can set up IRC in Thunderbird by following the <a href="https://support.mozilla.org/kb/instant-messaging-and-chat#w_configuring-chat">instructions on SUMO</a>.') }}
         </p>
       </article>
     </section>
@@ -59,7 +59,7 @@
         <article class="flex flex-col w-full mb-6 lg:pr-8">
           <h4 class="subheader-section">{{ _('Security') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/" target="_blank">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird" target="_blank">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
+            {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
           </p>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
             {{ _('Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don’t get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}
